# TrueTickets

./: .gitignore  API_GATEWAY_CORS_FIX.md  COGNITO_PASSWORD_RESET_TROUBLESHOOTING.md  LICENSE  QUICK_REFERENCE.md  README.md  RepairShopRObjects.cs  TRUE_TICKETS_SETUP_GUIDE.md  amplify.yml  bulk_api_generic_updates.patch  cognito-diagnostic.js  errors.txt  eslint.config.js  index.html  lint-output.txt  package-lock.json  package.json  setup-env.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: build-lambda-linux.yml  deploy-lambda.yml
Backend/: Cargo.toml  QUICK_START.md  cargo_errors.txt  check_final.txt  check_output.txt  lambda_function.py  requirements.txt
Backend/src/: auth.rs  db_utils.rs  http.rs  main.rs  models.rs  repairShoprApiReference.ts
Backend/src/handlers/: attachments.rs  customers.rs  database_management.rs  financials.rs  migration.rs  mod.rs  proxy.rs  store_config.rs  tickets.rs  user_management.rs
Backend2/TrueTickets/: Cargo.toml  QUICK_START.md
Backend2/TrueTickets/src/: main.rs
Backend_old/: lambda_function.py
Frontend/: QUICK_REFERENCE.md  amplify.yml  eslint.config.js  package-lock.json  tsconfig.json  vite.config.ts
Frontend/src/: App.tsx  aws-exports.ts  index.css  main.tsx  vite-env.d.ts
Frontend/src/api/: apiClient.ts
Frontend/src/components/: AuthProvider.tsx  CustomerView.tsx  KeyBindsProvider.tsx  NewCustomer.tsx  SearchModal.tsx  SettingsPage.tsx  TicketCard.tsx  TicketEditor.tsx  TicketView.tsx  UserGroupsContext.tsx
Frontend/src/constants/: appConstants.ts  authConstants.ts
Frontend/src/contexts/: KeyBindsContext.ts
Frontend/src/hooks/: useApi.ts  useHotkeys.ts  useKeyBindsContext.ts  useRegisterKeybinds.ts
Frontend/src/types/: amplify.d.ts  (+1 more)
Infra/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf
src/: App.jsx  App.jsx.old  App.tsx  aws-exports.js  aws-exports.ts  html2pdf.d.ts  index.css  main.jsx  main.tsx  vite-env.d.ts
src/api/: apiClient.js  apiClient.ts  lambdaClient.js
src/components/: AlertSystem.jsx  Auth.jsx  Auth.tsx  AuthProvider.tsx  CustomerView.jsx  CustomerView.tsx  KeyBindsProvider.tsx  LoadingSpinner.jsx  NavigationButton.jsx  NewCustomer.jsx  NewCustomer.tsx  SearchModal.jsx  SearchModal.tsx  SettingsPage.tsx  TicketCard.jsx  TicketCard.tsx  TicketDocument.tsx  TicketEditor.jsx  TicketEditor.tsx  TicketList.tsx  TicketView.jsx  TicketView.tsx  TopBar.tsx  UserGroupsContext.tsx
src/constants/: appConstants.js  appConstants.ts  authConstants.ts
src/context/: StoreConfigContext.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useApi.js  useApi.ts  useChangeDetection.js  useChangeDetection.ts  useHotkeys.js  useHotkeys.ts  useRegisterKeybinds.ts  useRoute.js  useRoute.ts
src/types/: api.ts  components.ts  index.ts
src/utils/: appUtils.jsx  appUtils.tsx  clockUtils.ts
(+27 files in other folders)
