[lints.clippy]
unwrap_used = "deny"
panic = "deny"
enum_glob_use = "deny"

[lints.rust]
unused_must_use = "deny"

[package]
name = "TrueTickets"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "1.0.1"
tokio = { version = "1", features = ["macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

aws-config = "1.8"
aws-sdk-cognitoidentityprovider = "1.103"
aws-sdk-s3 = "1.68"
base64 = "0.22"
rand = "0.9"
aws-sdk-dynamodb = "1.101.0"
chrono = "0.4.42"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
