[lints.clippy]
unwrap_used = "deny"
panic = "deny"
enum_glob_use = "deny"

[lints.rust]
unused_must_use = "deny"

[package]
name = "TrueTickets"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "1.0.1"
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.68", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-dynamodb = { version = "1.101.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-cognitoidentityprovider = { version = "1.103", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }

rand = "0.9"
base64 = "0.22"
chrono = "0.4.42"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
