[package]
name = "TrueTickets"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_http = "1.0.1"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
urlencoding = "2.1"
aws-config = "1.8"
aws-sdk-cognitoidentityprovider = "1.103"
rand = "0.9"
